@@ -1,5 +1,10 @@
 2008-04-05  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/modtypes/tarball.py: add support for makefile attribute for
+	tarball modules (closes: #526316)
+
+2008-04-05  Frederic Peters  <fpeters@0d.be>
+
 	* doc/C/jhbuild.xml, jhbuild/config.py, jhbuild/defaults.jhbuildrc,
 	jhbuild/frontends/terminal.py, jhbuild/modtypes/__init__.py,
 	jhbuild/modtypes/autotools.py, jhbuild/modtypes/cmake.py,
